--- a/templates/proba.html
+++ b/templates/proba.html
@@ -11,33 +11,34 @@
   
   <a href="#" title="Header 1" data-bs-toggle="popover" data-bs-trigger="hover" data-bs-content="Popover text 1">Hover over me</a>
 </div>
-<br><br><br><br><br><br>
+<br><br><br><br>
 <div class="container mt-3">
 
     <a href="#" title="Header 2" data-bs-toggle="popover" data-bs-trigger="focus" data-bs-content="Popover text 2">Hover over me</a>
 </div>
-<br><br><br><br><br><br>
+<br><br><br><br><
 <div class="container mt-3">
 
     <a class="btn btn-secondary btn-sm m-1" 
     href="#" 
     title="Header 3" 
     data-bs-toggle="popover" 
-    data-bs-trigger="hover" 
+    data-bs-trigger="hover"
+    data-bs-placement="top"
     data-bs-content="Popover text 3">
     <span class="fa fa-cog"> Hover over me </span></a>
 </div>
 <br><br>
 
 <a class="btn btn-secondary btn-sm m-1"
-                        href="#" 
-                        title="Popover Header"
-                        data-bs-trigger="hover"
-                        data-bs-toggle="popover"
-                        data-bs-content="Some content inside the popover"
-                        data-placement="top">
-                        <span class="fa fa-cog">Test Popover</span>
-                        </a>
+    href="#" 
+    title="Popover Header"
+    data-bs-trigger="hover"
+    data-bs-toggle="popover"
+    data-bs-content="Some content inside the popover"
+    data-placement="top">
+    <span class="fa fa-cog">Test Popover</span>
+</a>
 
 
 {% endblock %}
