--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             <br>
             <br>
         </div>
-        <div class="row"></div>
+    <div class="row"></div>
         
             
         {% block content %}{% endblock %}
@@ -41,8 +41,11 @@
     <div class="row">
         <!-- Placeholder for the modal -->
         <div id="modalForm" class="modal fade">
-            <div id="dialog" class="modal-dialog modal-dialog-centered" hx-target="this"></div>
+            <div id="dialog" class="modal-dialog modal-dialog-centered container-fluid" hx-target="this">     
+            </div>
+        </div> 
     </div> 
+
     <!-- Empty toast to show the message -->
     <div class="toast-container position-absolute top-50 start-50 p-3">
         <div id="toast" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
