--- a/shop/templates/shop/coffee_order_table.html
+++ b/shop/templates/shop/coffee_order_table.html
@@ -73,7 +73,7 @@
                         hx-get="{% url 'shop:coffee_order_form' pkey=coffee.pk %}"
                         hx-target="#dialog"
                         title="Order a Coffe!">
-                            <span class="fa fa-shopping-basket"> I'm booking</span></a>
+                            <span class="fa fa-shopping-basket"> I'd like one.</span></a>
                         {% else %}
                             <p style="color:red; font-size: 24px;">It's full</p>
                         {% endif %}
