--- a/shop/templates/shop/coffee_home.html
+++ b/shop/templates/shop/coffee_home.html
@@ -24,36 +24,57 @@
 
 <div class="container pt-2 middle ">
     <div class="col-sm-6 right ">
-        <h1> Kávé adatlaplap </h1>
+        <h1> Coffe Shop Functions </h1>
     </div>    
 </div>
 
 <div class="container sm-8 pt-2 ">
-    <div class="row">
+    <div class="row p-3">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-3 ">
+            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_order' %}" {% endif %}
+            title="To the Coffee Ordering Page"               
+            data-bs-toggle="popover" 
+            data-bs-trigger="hover" 
+            data-bs-content="There you can book some dose Coffe. From half a dose to two doses.
+            With milk, sugar, and flavoring.">              
+            <img src ="{% static '/image/koffe.jpeg' %}" class="img-thumbnail" 
+            style="width:200px;height:200px;"; alt="choice">                 
+        </a>
+    </div>
+    </div>
+    
+    <div class="row p-3">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-3">
+            <a  {% if user.is_staff %} href="{% url 'shop:coffee_make' %}" {% endif %}
+            title="To the Coffee Making Page"               
+            data-bs-toggle="popover" 
+            data-bs-trigger="hover" 
+            data-bs-content="There you can indicate when the next coffee portions will be ready. 
+            Only for STAFF ">                
+            <img src ="{% static '/image/coffee_machine_1.jfif' %}"  class="img-thumbnail" 
+            style="width:200px;height:200px;"; alt="choice">               
+        </a>
+    </div>
+</div>
+<div class="row p-3">
+        <div class="col-sm-1"></div>
         <div class="col-sm-3 right ">
-            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_order' %}" {% endif %}>                
-                <img src ="{% static '/image/koffe.jpeg' %}" class="rounded" 
-                style="width:200px;height:200px; border:5px solid; "; alt="choice">                 
-            </a>
-        </div>
-        <div class="col-sm-3 right ">
-            <a  {% if user.is_staff %} href="{% url 'shop:coffee_make' %}" {% endif %}>                
-                <img src ="{% static '/image/coffee_machine_1.jfif' %}" class="rounded" 
-                style="width:200px;height:200px; border:5px solid; padding: 5px;background-color:white;"; alt="choice">               
-            </a>
-        </div>
-        <div class="col-sm-3 right ">
-            <a  {% if user.is_staff %} href="{% url 'shop:coffee_booking' %}" {% endif %}>                
-                <img src ="{% static '/image/coffe_book_1.png' %}" class="rounded" 
-                style="width:200px;height:200px; border:5px solid; padding: 5px;background-color:white;"; alt="choice">              
+            <a  {% if user.is_staff %} href="{% url 'shop:coffee_booking' %}" {% endif %}
+            title="To the Coffee Booking Page"               
+            data-bs-toggle="popover" 
+            data-bs-trigger="hover" 
+            data-bs-content="On this page you can record the depletion of finished 
+            and consumed raw materials. Only for STAFF ">               
+                <img src ="{% static '/image/coffe_book_1.png' %}"  class="img-thumbnail" 
+                style="width:200px;height:200px;"; alt="choice">                
             </a>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-3 right"><h2>Rendelés</h2></div>
-        <div class="col-sm-3 right"><h2>Főzés</h2></div>
-        <div class="col-sm-3 right"><h2>Könyvelés</h2></div>
-    </div>
+
+    
+    
 </div>
 
 {% endblock%}
