--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -82,6 +82,17 @@
     <li class="nav-item"> 
       <a class="nav-link"><img {{ sub_site_logo }} alt="Sub Logo" style="width:40px;" class="rounded-pill"></a>
     </li>
+    <li class="nav-item"> 
+      <!-- Empty toast to show the message -->
+      <div class="toast-container position-absolute top-0 end-0 p-3">
+        <div id="toast" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="d-flex">
+            <div id="toast-body" class="toast-body"></div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+        </div>
+      </div>
+    </li>
     
     </ul>
     <!-- include 'search/snippets/search-form.html' -->
