--- a/shop/templates/shop/coffee_booking.html
+++ b/shop/templates/shop/coffee_booking.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Coffee Order
+    Coffee Booking
 {% endblock %}
 
 {% block style %}    
@@ -26,7 +26,11 @@
 <div class="container sm ">
     <div class="row-sm-2">
         <div class="col-sm-2 right">
-            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_home' %}" {% endif %}>                
+            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_home' %}" {% endif %}
+            title="Back Coffee Page"               
+                data-bs-toggle="popover" 
+                data-bs-trigger="hover" 
+                data-bs-content="Order, Make, Booking">                
                 <img src ="{% static '/image/coffe_book_1.png' %}" class="rounded" 
                 style="width:100px;height:100px; border:5px solid; "; alt="choice">                 
             </a>
@@ -77,7 +81,8 @@
                         <a class="btn btn-danger btn-sm" 
                         href="{% url 'shop:coffee_order_remove' pk=order.pk %}"
                         onclick="return confirm('Biztosan törölni akarja?')">
-                            <span class="fa fa-trash-o"></span></a>
+                            <span class="fa fa-trash-o"></span>
+                        </a>
                         {% endif %}>
                     </td>
                     {% endif %}       
