--- a/shop/templates/shop/coffee_make.html
+++ b/shop/templates/shop/coffee_make.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Coffee Make
+    Coffee Makeing
 {% endblock %}
 
 {% block style %}    
@@ -25,7 +25,11 @@
     <br>
     <div class="row-sm-2">
         <div class="col-sm-2 right">
-            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_home' %}" {% endif %}>                
+            <a  {% if user.is_authenticated %} href="{% url 'shop:coffee_home' %}" {% endif %}
+            title="Back Coffee Page"               
+                data-bs-toggle="popover" 
+                data-bs-trigger="hover" 
+                data-bs-content="Order, Make, Booking">             
                 <img src ="{% static '/image/coffee_machine_1.jfif' %}" class="rounded" 
                 style="width:100px;height:100px; border:5px solid; "; alt="choice">                 
             </a>
