--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -60,6 +60,8 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             {% if user.is_superuser %}
               <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+              <a class="dropdown-item" href="{% url 'c_app:all_tasks' %}">Mobil App</a>
+              <a class="dropdown-item" href="{% url 'accounts:token_gen' %}">Token G</a>
             {% endif %}
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
